[metadata]
name = python-kibana
version = 0.0.6
author = Linus
author_email = element.oxygen@gmail.com
description = Kibana for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WildDogOne/python-kibana
project_urls =
    Bug Tracker = https://github.com/WildDogOne/python-kibana/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src