[metadata]
name = kibana-python
version = 0.1.2
author = Linus Laeubli
author_email = laei@zhaw.ch
description = Kibana for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.zhaw.ch/laei/kibana-python
project_urls =
    Bug Tracker = https://gitlab.zhaw.ch/sia/kibana-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src